diesel-builders-macros/tests/ui/fail/derive_get_column_no_diesel_attr.rs
// Test that GetColumn derive fails without diesel attribute

use diesel_builders_macros::GetColumn;

#[derive(GetColumn)]
struct User {
    id: i32,
    name: String,
}

fn main() {}
